🎨 books, auth API 사양에 맞게 수정